--- a/modules-available/serversetup-bwlp/templates/ipaddress.html
+++ b/modules-available/serversetup-bwlp/templates/ipaddress.html
@@ -1,12 +1,11 @@
-<a class="btn btn-default" href="?do=Serversetup&amp;advanced=false" role="button"><strong>{{lang_ipxeSmp}}</strong></a></br></br>
 <div class="panel panel-default">
 	<div class="panel-heading">
 		{{lang_bootAddress}}
 	</div>
 	<div class="panel-body">
-		<p>
+		<div class="{{chooseHintClass}}">
 			{{lang_chooseIP}}
-		</p>
+		</div>
 		<form method="post" action="?do=ServerSetup">
 			<input type="hidden" name="action" value="ip">
 			<input type="hidden" name="token" value="{{token}}">
