work work work work work

--- a/modules-available/baseconfig/templates/_page.html
+++ b/modules-available/baseconfig/templates/_page.html
@@ -63,5 +63,5 @@
 	</div>
 	<button class="btn btn-primary" type="submit">{{lang_save}}</button>
 	<button class="btn btn-default" type="reset">{{lang_reset}}</button>
-	<a class="btn btn-default" href="api.php?do=baseconfig">Download</a>
+	<a class="btn btn-default" href="api.php?do=baseconfig&amp;user={{userid}}">Download</a>
 </form>
