[serversetup-bwlp] Add usb image download button

--- a/modules-available/serversetup-bwlp/templates/ipxe.html
+++ b/modules-available/serversetup-bwlp/templates/ipxe.html
@@ -43,6 +43,10 @@
 		</div>
 
 		<div class="panel-footer">
+			<a class="btn btn-default pull-right" href="?do=ServerSetup&amp;action=getimage">
+				<span class="glyphicon glyphicon-download-alt"></span>
+				{{lang_downloadImage}}
+			</a>
 			<button class="btn btn-primary" name="action" value="ipxe">{{lang_bootMenuCreate}}</button>
 		</div>
 	</div>
