[locations] Add machine count to each location

--- a/modules-available/locations/templates/location-subnets.html
+++ b/modules-available/locations/templates/location-subnets.html
@@ -1,4 +1,4 @@
-<div class="slx-well">
+<td class="slx-well">
 	<div class="slx-bold">{{lang_locationSettings}}</div>
 	<form method="post" action="?do=Locations">
 		<input type="hidden" name="token" value="{{token}}">
@@ -58,7 +58,7 @@
 				</td>
 				<td colspan="2" align="right">
 					<button type="submit" class="btn btn-primary">{{lang_save}}</button>
-				</div>
+				</td>
 			</tr>
 		</table>
 	</form>
