--- a/modules-available/exams/templates/page-add-exam.html
+++ b/modules-available/exams/templates/page-add-exam.html
@@ -10,16 +10,44 @@
         </select>
     </div>
 
-    <div class="form-group">
-        <label for="starttime">Start Time</label>
-        <input class="form-control" type="datetime" name="starttime" />
+    <div class="row">
+        <div class="form-group col-xs-6">
+            <label for="starttime_date">Start Date</label>
+            <input class="form-control datepicker" name="starttime_date" />
+        </div>
+        <div class="form-group col-xs-6">
+            <label for="starttime_time">Start Time</label>
+            <input type="text" class="form-control timepicker" name="starttime_time" />
+        </div>
     </div>
 
-    <div class="form-group">
-        <label for="endtime">Start Time</label>
-        <input class="form-control" type="datetime" name="endtime" />
+    <div class="row">
+        <div class="form-group col-xs-6">
+            <label for="endtime_date">End Date</label>
+            <input class="form-control datepicker" name="endtime_date" />
+        </div>
+        <div class="form-group col-xs-6">
+            <label for="endtime_time">End Time</label>
+            <input type="texxt" class="form-control timepicker" name="endtime_time" />
+        </div>
     </div>
 
     <input type="hidden" name="token" value="{{token}}" />
     <input type="submit" class="btn btn-success" value="Add Exam"></input>
 </form>
+
+<script type="application/javascript"><!--
+document.addEventListener("DOMContentLoaded", function () {
+    var dateSettings = {
+        format: 'yyyy-mm-dd',
+        weekStart: 1,
+        startDate: 'today',
+    };
+    var timeSettings = {
+        showSeconds: false,
+        showMeridian: false
+    };
+    $('.datepicker').datepicker(dateSettings);
+    $('.timepicker').timepicker(timeSettings);
+}, false);
+// --></script>
