First version of a visualization.

--- a/modules-available/exams/templates/page-add-exam.html
+++ b/modules-available/exams/templates/page-add-exam.html
@@ -31,6 +31,12 @@
             <input type="texxt" class="form-control timepicker" name="endtime_time" />
         </div>
     </div>
+    <div class="row">
+        <div class="form-group col-xs-12">
+            <label for="description">Description</label>
+            <textarea class="form-control" type="textarea" name="description"></textarea>
+        </div>
+    </div>
 
     <input type="hidden" name="token" value="{{token}}" />
     <input type="submit" class="btn btn-success" value="Add Exam"></input>
