--- a/modules-available/exams/templates/page-add-exam.html
+++ b/modules-available/exams/templates/page-add-exam.html
@@ -2,8 +2,8 @@
 
 <form class="form" method="POST" action="?do=exams&action=add">
     <div class="form-group">
-        <label for="location">Location</label>
-        <select name="location" class="form-control">
+        <label for="locations">Location</label>
+        <select id="locations" multiple="multiple" name="locations[]" class="">
             {{#locations}}
             <option value="{{locationid}}"> {{locationname}} </option>
             {{/locations}}
@@ -13,22 +13,22 @@
     <div class="row">
         <div class="form-group col-xs-6">
             <label for="starttime_date">Start Date</label>
-            <input class="form-control datepicker" name="starttime_date" />
+            <input required class="form-control datepicker" name="starttime_date" />
         </div>
         <div class="form-group col-xs-6">
             <label for="starttime_time">Start Time</label>
-            <input type="text" class="form-control timepicker" name="starttime_time" />
+            <input required type="text" class="form-control timepicker" name="starttime_time" />
         </div>
     </div>
 
     <div class="row">
         <div class="form-group col-xs-6">
             <label for="endtime_date">End Date</label>
-            <input class="form-control datepicker" name="endtime_date" />
+            <input required class="form-control datepicker" name="endtime_date" />
         </div>
         <div class="form-group col-xs-6">
             <label for="endtime_time">End Time</label>
-            <input type="texxt" class="form-control timepicker" name="endtime_time" />
+            <input required type="texxt" class="form-control timepicker" name="endtime_time" />
         </div>
     </div>
     <div class="row">
@@ -55,5 +55,7 @@ document.addEventListener("DOMContentLoaded", function () {
     };
     $('.datepicker').datepicker(dateSettings);
     $('.timepicker').timepicker(timeSettings);
+
+    $('#locations').multiselect({numberDisplayed: 1});
 }, false);
 // --></script>
