--- a/modules-available/exams/templates/page-exams.html
+++ b/modules-available/exams/templates/page-exams.html
@@ -12,9 +12,7 @@
 		{{#exams}}
 			<tr>
 				<td>{{examid}}</td>
-				<td>
-					<a href="?do=baseconfig&module=locations&locationid={{locationid}}"> {{locationname}} </a>
-				</td>
+				<td> {{locationnames}} </td>
 				<td>{{starttime}}</td>
 				<td>{{endtime}}</td>
 				<td>
@@ -38,11 +36,7 @@
 
 
 function customOrder(a, b) {
-	console.log("a is ");
-	console.log(a);
-	console.log("b is ");
-	console.log(b);
-	return 1000;
+	return 1000; // just in order of appeareance
 }
 
 document.addEventListener("DOMContentLoaded", function () {
@@ -53,16 +47,6 @@ document.addEventListener("DOMContentLoaded", function () {
 	console.log(items_plain);
 	var groups = new vis.DataSet(groups_plain);
 	var items = new vis.DataSet(items_plain);
-	// var groups = new vis.DataSet([
-	// 								{ id: 1, content:'RZ -101' },
-	// 								{ id: 2, content:'RZ -104' }
-	// 							]);
-	// var items = new vis.DataSet([
-	// 							{ id: 1, group: 1, content: 'Bio 1', start: '2016-06-15 10:30', end : '2016-06-15 14:45'},
-	// 							{ id: 2, group: 1, content: 'Bio 2', start: '2016-06-15 10:45', end : '2016-06-15 15:00'},
-	// 							{ id: 3, group: 2, content: 'Englisch', start: '2016-06-15 16:00', end : '2016-06-15 17:15'},
-	// 							{ id: 4, group: 1, content: 'BACKGROUND', start: '2016-06-15-11:00', end: '2016-06-15 18:00', type: 'background'}
-	// ]);
 
 	var options = {
 		'start' : '{{{vis_begin}}}',
