small style changes

--- a/modules-available/exams/templates/page-exams.html
+++ b/modules-available/exams/templates/page-exams.html
@@ -29,7 +29,7 @@
 	</table>
 	<a href="?do=exams&action=add" class="btn btn-success">Add Exam </a>
 
-	<div id="timeline"> </div>
+	<div class="block" id="timeline"> </div>
 
 </div>
 <script type="application/javascript"><!--
