Updated the no-autofill-hack.

--- a/modules-available/internetaccess/templates/_page.html
+++ b/modules-available/internetaccess/templates/_page.html
@@ -1,8 +1,8 @@
 <h1>{{lang_internetAccess}}</h1>
 
 <form action="?do=InternetAccess" method="post">
-	<input type="text" name="prevent_autofill" id="prevent_autofill" value="" style="display:none;">
-	<input type="password" name="password_fake" id="password_fake" value="" style="display:none;">
+	<input type="text" name="prevent_autofill" id="prevent_autofill" value="" style="position:absolute;top:-200px" tabindex="-1">
+	<input type="password" name="password_fake" id="password_fake" value="" style="position:absolute;top:-200px" tabindex="-1">
 	<input type="hidden" name="token" value="{{token}}">
 	<div class="panel panel-default">
 		<div class="panel-heading">{{lang_internetAccess}}</div>
