--- a/modules-available/adduser/templates/page-adduser.html
+++ b/modules-available/adduser/templates/page-adduser.html
@@ -1,6 +1,6 @@
 <form class="form-adduser" action="?do=AddUser" method="post">
-	<input type="text" name="prevent_autofill" id="prevent_autofill" value="" style="display:none;">
-	<input type="password" name="password_fake" id="password_fake" value="" style="display:none;">
+	<input type="text" name="prevent_autofill" id="prevent_autofill" value="" style="position:absolute;top:-200px" tabindex="-1">
+	<input type="password" name="password_fake" id="password_fake" value=""  style="position:absolute;top:-200px" tabindex="-1">
 	<h2 class="form-signin-heading">{{lang_createUser}}</h2>
 	<div class="row">
 		<div class="col-md-4">{{lang_username}} *</div>
